<?xml version="1.0" encoding="UTF-8"?>
<project
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">

	<modelVersion>4.0.0</modelVersion>
	<!-- Tycho requires Maven 3 -->
	<prerequisites>
		<maven>3.0</maven>
	</prerequisites>

	<parent>
		<groupId>de.abg.jreichert.repositorytarget</groupId>
		<artifactId>de.abg.jreichert.repositorytarget.config.parent</artifactId>
		<version>0.1.0-SNAPSHOT</version>
		<relativePath>../../releng/de.abg.jreichert.repositorytarget.config.parent/pom.xml</relativePath>
	</parent>

	<groupId>de.abg.jreichert.repositorytarget</groupId>
	<artifactId>de.abg.jreichert.repositorytarget.parent</artifactId>
	<version>0.1.0-SNAPSHOT</version>
	<packaging>pom</packaging>

	<properties>
		<maven-resources-plugin.version>2.6</maven-resources-plugin.version>
		<maven-compiler-plugin-version>3.1</maven-compiler-plugin-version>
		<maven-antrun-plugin.version>1.7</maven-antrun-plugin.version>
		<maven-install-plugin.version>2.4</maven-install-plugin.version>
		<maven-surefire-plugin.version>2.16</maven-surefire-plugin.version>
		<maven-scm-plugin.version>1.8.1</maven-scm-plugin.version>
		<maven-assembly-plugin.version>2.4</maven-assembly-plugin.version>
		<maven-release-plugin.version>2.4.1</maven-release-plugin.version>
		<maven-checkstyle-plugin.version>2.10</maven-checkstyle-plugin.version>
		<findbugs-maven-plugin.version>2.5.2</findbugs-maven-plugin.version>
		<maven-pmd-plugin.version>3.0.1</maven-pmd-plugin.version>
		<build-helper-maven-plugin.version>1.8</build-helper-maven-plugin.version>
		<eclipse-signing-maven-plugin.version>1.0.5</eclipse-signing-maven-plugin.version>
		<exec-maven-plugin-version>1.2.1</exec-maven-plugin-version>
		<xtend-maven-plugin-version>2.5.0</xtend-maven-plugin-version>
		<xtend-library-version>2.5.0</xtend-library-version>
		<xtext-version>2.5.0</xtext-version>
		<jacoco-maven-plugin.version>0.6.3.201306030806</jacoco-maven-plugin.version>
		<junit-version>4.11</junit-version>
		<local-build-platform.version>[3.8,4.3)</local-build-platform.version>
		<java-compile-version>1.7</java-compile-version>
		<maven.compiler.source>1.7</maven.compiler.source>
		<maven.compiler.target>1.7</maven.compiler.target>
		<project.encoding>UTF-8</project.encoding>
		<file.encoding>${project.encoding}</file.encoding>
		<project.build.sourceEncoding>${project.encoding}</project.build.sourceEncoding>
		<project.reporting.outputEncoding>${project.encoding}</project.reporting.outputEncoding>
		<memoryInitial>128m</memoryInitial>
		<memoryMaximum>1024m</memoryMaximum>
		<memoryArgs>-Xms${memoryInitial} -Xmx${memoryMaximum}
			-XX:PermSize=256m -XX:MaxPermSize=256m</memoryArgs>
		<encodingArgs>-Dfile.encoding=${file.encoding}</encodingArgs>
		<loggingArgs>-Dlog4j.configuration=file:${project.basedir}/../../plugins/de.abg.jreichert.repositorytarget.activeannotations/log4j.xml</loggingArgs>
		<skip.mwe2>true</skip.mwe2>
		<coverageAgent></coverageAgent>
		<it.coverage.argLine></it.coverage.argLine>
		<RTG-local-targetrepository>file:../../releng/de.abg.jreichert.repositorytarget.repository/target/repository</RTG-local-targetrepository>
	</properties>

	<build>
		<sourceDirectory>src</sourceDirectory>
		<plugins>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-source-plugin</artifactId>
				<version>${tycho-version}</version>
				<executions>
					<execution>
						<id>attach-source</id>
						<goals>
							<goal>plugin-source</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>${maven-compiler-plugin-version}</version>
					<configuration>
						<source>>${java-compile-version}</source>
						<target>>${java-compile-version}</target>
					</configuration>
				</plugin>
				<!-- TYCHO -->
				<plugin>
					<groupId>org.eclipse.tycho</groupId>
					<artifactId>tycho-compiler-plugin</artifactId>
					<version>${tycho-version}</version>
					<configuration>
						<encoding>${project.encoding}</encoding>
						<meminitial>${memoryInitial}</meminitial>
						<maxmem>${memoryMaximum}</maxmem>
						<source>${java-compile-version}</source>
						<target>${java-compile-version}</target>
						<verbose>true</verbose>
					</configuration>
				</plugin>
				<!-- enable source bundle generation -->
				<plugin>
					<groupId>org.eclipse.tycho</groupId>
					<artifactId>tycho-surefire-plugin</artifactId>
					<version>${tycho-version}</version>
					<configuration>
						<useUIHarness>false</useUIHarness>
						<useUIThread>false</useUIThread>
						<argLine>${memoryArgs} ${ui.test.vmargs} ${it.coverage.argLine}
							-Dlog4j.configuration=file:${project.basedir}/log4j.properties</argLine><!-- 
							different for mac/not mac -->
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.eclipse.tycho</groupId>
					<artifactId>tycho-p2-repository-plugin</artifactId>
					<version>${tycho-version}</version>
				</plugin>
				<!-- APACHE MAVEN PLUGINS -->
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-resources-plugin</artifactId>
					<version>${maven-resources-plugin.version}</version>
					<configuration>
						<encoding>${project.encoding}</encoding>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-antrun-plugin</artifactId>
					<version>${maven-antrun-plugin.version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-deploy-plugin</artifactId>
					<version>${maven-deploy-plugin.version}</version>
					<configuration>
						<skip>true</skip>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-install-plugin</artifactId>
					<version>${maven-install-plugin.version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>${maven-surefire-plugin.version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-scm-plugin</artifactId>
					<version>${maven-scm-plugin.version}</version>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-assembly-plugin</artifactId>
					<version>${maven-assembly-plugin.version}</version>
				</plugin>
				<plugin>
					<artifactId>maven-release-plugin</artifactId>
					<version>${maven-release-plugin.version}</version>
					<configuration>
						<preparationGoals>clean -DnewVersion=${releaseVersion}
							-Dprudent=true
							org.eclipse.tycho:tycho-versions-plugin:set-version
							verify
							scm:checkin</preparationGoals>
						<arguments>-Prelease</arguments>
					</configuration>
				</plugin>
				<!-- OTHER PLUGINS -->
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-checkstyle-plugin</artifactId>
					<version>${maven-checkstyle-plugin.version}</version>
					<configuration>
						<excludes>**org/eclipse.**:**/internal/**:**antlr**:**/parseTree**:**Abstract**RuntimeModule**:**SetupGenerated**:**Abstract**Validator**:
							**GrammarAccess**:**Abstract**UiModule**:**Abstract**ProposalProvider**:**Abstract**SemanticSequencer**</excludes>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>findbugs-maven-plugin</artifactId>
					<version>${findbugs-maven-plugin.version}</version>
					<configuration>
						<findbugsXmlOutput>true</findbugsXmlOutput>
						<failOnError>false</failOnError>
						<excludeFilterFile>findbugs-exclude.xml</excludeFilterFile>
					</configuration>
					<executions>
						<execution>
							<goals>
								<goal>check</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-pmd-plugin</artifactId>
					<version>${maven-pmd-plugin}</version>
					<configuration>
						<excludeRoots>
							<excludeRoot>src-gen</excludeRoot>
							<excludeRoot>xtend-gen</excludeRoot>
						</excludeRoots>
					</configuration>
				</plugin>
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>build-helper-maven-plugin</artifactId>
					<version>${build-helper-maven-plugin.version}</version>
					<executions>
						<execution>
							<id>add-source</id>
							<phase>generate-sources</phase>
							<goals>
								<goal>add-source</goal>
							</goals>
							<configuration>
								<sources>
									<source>src-gen</source>
								</sources>
								<sources>
									<source>${project.build.directory}/xtend-gen</source>
								</sources>
							</configuration>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<groupId>org.eclipse.dash.maven</groupId>
					<artifactId>eclipse-signing-maven-plugin</artifactId>
					<version>${eclipse-signing-maven-plugin.version}</version>
				</plugin>
				<plugin>
					<groupId>org.codehaus.mojo</groupId>
					<artifactId>exec-maven-plugin</artifactId>
					<version>${exec-maven-plugin-version}</version>
					<executions>
						<execution>
							<phase>generate-sources</phase>
							<goals>
								<goal>java</goal>
							</goals>
						</execution>
					</executions>
					<configuration>
						<skip>${skip.mwe2}</skip>
						<includeProjectDependencies>false</includeProjectDependencies>
						<includePluginDependencies>true</includePluginDependencies>
						<mainClass>org.eclipse.emf.mwe2.launch.runtime.Mwe2Launcher</mainClass>
						<arguments>
							<argument>file://${project.basedir}/${mwe2.relative.path}</argument>
						</arguments>
					</configuration>
					<dependencies>
						<dependency>
							<groupId>org.eclipse.xtext</groupId>
							<artifactId>org.eclipse.xtext.xtext</artifactId>
							<version>${xtext-version}</version>
						</dependency>
						<dependency>
							<groupId>org.eclipse.xtext</groupId>
							<artifactId>org.eclipse.xtext.xbase</artifactId>
							<version>${xtext-version}</version>
						</dependency>
					</dependencies>
				</plugin>
				<plugin>
					<groupId>org.eclipse.xtend</groupId>
					<artifactId>xtend-maven-plugin</artifactId>
					<version>${xtend-maven-plugin-version}</version>
					<executions>
						<execution>
							<goals>
								<goal>compile</goal>
								<goal>xtend-install-debug-info</goal>
								<goal>testCompile</goal>
								<goal>xtend-test-install-debug-info</goal>
							</goals>
						</execution>
					</executions>
					<configuration>
						<outputDirectory>${project.basedir}/xtend-gen</outputDirectory>
					</configuration>
					<dependencies>
						<dependency>
							<groupId>org.eclipse.xtend</groupId>
							<artifactId>org.eclipse.xtend.lib</artifactId>
							<version>${xtend-library-version}</version>
							<type>pom</type>
						</dependency>
					</dependencies>
				</plugin>
				<!-- https://groups.google.com/forum/#!msg/xtend-lang/TCnMhyTAqf8/GFRBRo0GtUsJ -->
				<plugin>
					<groupId>org.eclipse.m2e</groupId>
					<artifactId>lifecycle-mapping</artifactId>
					<version>1.0.0</version>
					<configuration>
						<lifecycleMappingMetadata>
							<pluginExecutions>
								<pluginExecution>
									<pluginExecutionFilter>
										<groupId>org.eclipse.xtend</groupId>
										<artifactId>xtend-maven-plugin</artifactId>
										<versionRange>[${xtend-library-version},]</versionRange>
										<goals>
											<goal>compile</goal>
											<goal>testCompile</goal>
										</goals>
									</pluginExecutionFilter>
									<action>
										<execute>
											<runOnIncremental>true</runOnIncremental>
											<runOnConfiguration>true</runOnConfiguration>
										</execute>
									</action>
								</pluginExecution>
							</pluginExecutions>
						</lifecycleMappingMetadata>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>
	</build>
	<profiles>
		<profile>
			<id>local-build</id>
			<activation>
				<property>
					<name>local-build</name>
				</property>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.eclipse.tycho</groupId>
						<artifactId>target-platform-configuration</artifactId>
						<version>${tycho-version}</version>
						<configuration>
							<resolver>p2</resolver>
							<pomDependencies>consider</pomDependencies>
							<environments>
								<environment>
									<os>win32</os>
									<ws>win32</ws>
									<arch>x86</arch>
								</environment>
								<environment>
									<os>win32</os>
									<ws>win32</ws>
									<arch>x86_64</arch>
								</environment>
								<environment>
									<os>macosx</os>
									<ws>cocoa</ws>
									<arch>x86_64</arch>
								</environment>
								<environment>
									<os>macosx</os>
									<ws>cocoa</ws>
									<arch>x86</arch>
								</environment>
								<environment>
									<os>linux</os>
									<ws>gtk</ws>
									<arch>x86</arch>
								</environment>
								<environment>
									<os>linux</os>
									<ws>gtk</ws>
									<arch>x86_64</arch>
								</environment>
							</environments>
						</configuration>
					</plugin>
				</plugins>
			</build>
			<repositories>
				<repository>
					<id>RTG-dependencies</id>
					<layout>p2</layout>
					<url>${RTG-local-targetrepository}</url>
				</repository>
			</repositories>
		</profile>
		<profile>
			<id>remote-build</id>
			<activation>
				<property>
					<name>!local-build</name>
				</property>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.eclipse.tycho</groupId>
						<artifactId>target-platform-configuration</artifactId>
						<version>${tycho-version}</version>
						<configuration>
							<resolver>p2</resolver>
							<pomDependencies>consider</pomDependencies>
							<target>
								<artifact>
									<groupId>de.abg.jreichert.repositorytarget</groupId>
									<artifactId>de.abg.jreichert.repositorytarget.targetplatform</artifactId>
									<version>${project.version}</version>
								</artifact>
							</target>
							<environments>
								<environment>
									<os>win32</os>
									<ws>win32</ws>
									<arch>x86</arch>
								</environment>
								<environment>
									<os>win32</os>
									<ws>win32</ws>
									<arch>x86_64</arch>
								</environment>
								<environment>
									<os>macosx</os>
									<ws>cocoa</ws>
									<arch>x86_64</arch>
								</environment>
								<environment>
									<os>macosx</os>
									<ws>cocoa</ws>
									<arch>x86</arch>
								</environment>
								<environment>
									<os>linux</os>
									<ws>gtk</ws>
									<arch>x86</arch>
								</environment>
								<environment>
									<os>linux</os>
									<ws>gtk</ws>
									<arch>x86_64</arch>
								</environment>
							</environments>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
		<profile>
			<id>skip-ui-tests</id>
			<activation>
				<property>
					<name>skip-ui-tests</name>
				</property>
			</activation>
			<properties>
				<tycho.surefire.skipUiTest>true</tycho.surefire.skipUiTest>
			</properties>
		</profile>
		<profile>
			<id>macosx</id>
			<activation>
				<os>
					<name>mac os x</name>
					<family>mac</family>
				</os>
			</activation>
			<properties>
				<ui.test.vmargs>-XstartOnFirstThread</ui.test.vmargs>
			</properties>
		</profile>
		<profile>
			<id>other-os</id>
			<activation>
				<os>
					<name>not-mac</name>
					<family>!mac</family>
				</os>
			</activation>
			<properties>
				<ui.test.vmargs></ui.test.vmargs>
			</properties>
		</profile>
	</profiles>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>junit</groupId>
				<artifactId>junit</artifactId>
				<version>${junit-version}</version>
				<scope>test</scope>
			</dependency>
			<dependency>
				<groupId>org.eclipse.xtend</groupId>
				<artifactId>org.eclipse.xtend.lib</artifactId>
				<version>${xtend-library.version}</version>
				<type>pom</type>
			</dependency>
		</dependencies>
	</dependencyManagement>
</project>
